--- a/spring-security/corespringsecurity/src/main/resources/application.properties
+++ b/spring-security/corespringsecurity/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# DB ??
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# ???? ??
+spring.thymeleaf.cache=false
+
+# devtools ??
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+
+spring.main.allow-bean-definition-overriding=true
 
